# fastapi_amount

./: pyproject.toml
app/: __main__.py  settings.py
app/api_amount/: app.py  database.py  main.py  settings.py  tables.py
app/api_amount/api/: auth.py  operations.py
app/api_amount/models/: __init__.py  operations.py
app/api_amount/services/: auth.py  operations.py
