[tool.poetry]
name = "fastapi_amount"
version = "0.1.0"
description = ""
authors = ["Александр Мельников <AMelnikov@migcredit.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.35"
pydantic = { extras = ["dotenv", 'email'], version = "^1.9.0" }
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
